Files renamed and frontend text changed

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
         <p>Chatbot Sam was taught to perform basic mathematical operation on integers. Check it on your own! <strong>Open the chat by clicking on the icon below and  greet him!</strong></p>
 
         <p>Behind Sam there are two feed-forward neural networks. First one, given user input, decides which type of predefined response to use and the second one tries to evaluate expression converted to a vector</p>
-        <p>Equations which Sam understand are those consisting of two values and an operator, for instance 1410 + 2137  </p>
+        <p>Equations which Sam understand are those consisting of two values and an operator, for instance 21 + 37. Remember than in train set Sam saw only numbers lower than 100! </p>
     </div>
     <div class="container">
         <div class="chatbox">
